--- a/index.html
+++ b/index.html
@@ -7,9 +7,27 @@
     <link rel="stylesheet" href="static/src/css/common/common.css">
     <link rel="stylesheet" href="static/src/css/index.css">
     <link rel="stylesheet" href="static/src/css/header.css">
+    <script src="static/src/js/jquery-1.10.1.min.js"></script>
 </head>
 <body>
-    <div class="top"></div>
+    <div class="top">
+        <div class="top-md">
+            <div class="top-r-nav"></div>
+            <div class="top-l-nav">
+                <div class="n-login">
+                    <span>您好，欢迎来到众划算！</span>
+                    <a href="#" title=""><span class="qq-icon iconfont">&#xe61b;</span>QQ 登录</a>
+                    <a href="#" class="login-init" title="">登录</a>
+                    <a href="#" title="">免费注册</a>
+                </div>
+                <div class="y-login">
+                    <span>您好！</span><a href="#" class="user-name" title="">阿斯达斯地地道道的对对对的的的的c</a>
+                    <a href="#" title="">您有未读提醒（11）条</a>
+                    <a href="#" title="">退出登录</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="header">
             <h1 class="logo">
                 <a href="#">
