--- a/index.html
+++ b/index.html
@@ -12,7 +12,70 @@
 <body>
     <div class="top">
         <div class="top-md">
-            <div class="top-r-nav"></div>
+            <div class="top-r-nav">
+                <ul>
+                    <li class="n-float-box attention">
+                        <a href="javascript:;" title="">关注我们 <span class="p-triangle"></span></a>
+                        <div class="n-cont">
+                            <span class="n-triangle">
+                                <i></i>
+                                <b></b>
+                            </span>
+                            <a href="#" class="sina" title=""><span class="iconfont">&#xe61c;</span>新浪微博</a>
+                            <a href="#" title="">订阅邮件</a>
+                            <span>关注微信</span>
+                            <div class="weixin-code">
+                                <span class="sprite"></span>
+                            </div>
+                        </div>
+                    </li>
+                    <li><a href="#" title="">试客联盟</a></li>
+                    <li><a href="#" title="">互联支付</a></li>
+                    <li><a href="#" title="">试客联盟</a></li>
+                    <li class="n-float-box n-site-map">
+                        <a href="#" title="">网站导航 <span class="p-triangle"></span></a>
+                        <div class="n-cont">
+                            <span class="n-triangle">
+                                <i></i>
+                                <b></b>
+                            </span>
+                            <dl>
+                                <dt>网站热点</dt>
+                                <dd>
+                                    <a href="#" title="">最新上线</a>
+                                    <a href="#" title="">一战成名</a>
+                                    <a href="#" title="">名品馆</a>
+                                    <a href="#" title="">商品汇总</a>
+                                    <a href="#" title="">买家晒单</a>
+                                </dd>
+                            </dl>
+                            <dl>
+                                <dt>社区</dt>
+                                <dd>
+                                    <a href="#" title="">社区</a>
+                                </dd>
+                            </dl>
+                            <dl>
+                                <dt>网站服务</dt>
+                                <dd>
+                                    <a href="#" title="">新手引导</a>
+                                    <a href="#" title="">帮助中心</a>
+                                    <a href="#" title="">招商专区</a>
+                                    <a href="#" title="">关于我们</a>
+                                </dd>
+                            </dl>
+                            <dl>
+                                <dt>合作网站</dt>
+                                <dd>
+                                    <a href="#" title="">试客联盟</a>
+                                    <a href="#" title="">互联支付</a>
+                                </dd>
+                            </dl>
+
+                        </div>
+                    </li>
+                </ul>
+            </div>
             <div class="top-l-nav">
                 <div class="n-login">
                     <span>您好，欢迎来到众划算！</span>
@@ -46,7 +109,7 @@
             </div>
     </div>
     <div class="nav">
-        <div class="nav-md">
+        <div class="nav-md clearfix">
             <ul>
                 <li><a href="#">商品汇总</a></li>
                 <li><a href="#">最新上线</a></li>
