提交侧边栏代码

--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7]>
+<html class="ie ie6"><![endif]-->
+<!--[if IE 7 ]>
+<html class="ie ie7"><![endif]-->
+<!--[if IE 8 ]>
+<html class="ie ie8"><![endif]-->
+<!--[if IE 9 ]>
+<html class="ie9"><![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!-->
+<html><!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -800,6 +809,34 @@
                      <a href="#"></a>
                  </p>
              </div>   
+        </div>
+    </div>
+    <div class="r-sidebar-md">
+        <div class="r-side-box">
+            <div class="r-side-cont">
+                <ul>
+                    <li>
+                        <a href="#" title="" class="iconfont">&#xe61d;</a>
+                    </li>
+                    <li>
+                        <a href="#" title="" class="iconfont">&#xe620;</a>
+                    </li>
+                    <li>
+                        <a href="#" title="" class="iconfont">&#xe621;</a>
+                    </li>
+                    <li>
+                        <a href="#" title="" class="iconfont">&#xe61f;</a>
+                    </li>
+                    <li>
+                        <a href="#" title="" class="go-top"><span></span>TOP</a>
+                    </li>
+                </ul>
+                <div class="go-floor">
+                    <a href="#" title=""><span>1F</span></a>
+                    <a href="#" title=""><span>2F</span></a>
+                    <a href="#" title=""><span>3F</span></a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
