--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
     <link rel="stylesheet" href="static/src/css/index.css">
     <link rel="stylesheet" href="static/src/css/header.css">
     <script src="static/src/js/jquery-1.10.1.min.js"></script>
+    <script src="static/src/js/index.js"></script>
+    <script src="static/src/js/global.js"></script>
+
+
+
 </head>
 <body>
     <div class="top">
         <div class="top-md">
             <div class="top-r-nav">
                 <ul>
-                    <li class="n-float-box attention">
+                    <li class="J_attention n-float-box attention">
                         <a href="javascript:;" title="">关注我们 <span class="p-triangle"></span></a>
                         <div class="n-cont">
                             <span class="n-triangle">
@@ -41,7 +46,7 @@
                     <li><a href="#" title="">试客联盟</a></li>
                     <li><a href="#" title="">互联支付</a></li>
                     <li><a href="#" title="">试客联盟</a></li>
-                    <li class="n-float-box n-site-map">
+                    <li class="J_n-site-map n-float-box n-site-map">
                         <a href="#" title="">网站导航 <span class="p-triangle"></span></a>
                         <div class="n-cont">
                             <span class="n-triangle">
