--- a/index.html
+++ b/index.html
@@ -133,7 +133,10 @@
                 <li><a href="#">买家晒单</a></li>
                 <li><a href="#">关于我们</a></li>
             </ul>
-            <a href="#" class="zs-inlet sprite"></a>
+            <a href="#" class="zs-inlet">
+                <span class="zs-zw sprite"></span>
+                <span class="zs-tit sprite">众划算招商入口</span>
+            </a>
         </div>
     </div>
     <div class="banner">
