--- a/index.html
+++ b/index.html
@@ -822,21 +822,51 @@
     <div class="r-sidebar-md">
         <div class="r-side-box">
             <div class="r-side-cont">
-                <ul>
+                <ul id="J_side">
                     <li>
                         <a href="#" title="" class="iconfont">&#xe61d;</a>
+                        <div class="tab-item">
+                            <div class="tab-item-cont">
+                                用户中心
+                            </div>
+                            <span class="tab-triangle"></span>
+                        </div>
                     </li>
                     <li>
                         <a href="#" title="" class="iconfont">&#xe620;</a>
+                        <div class="tab-item">
+                            <div class="tab-item-cont">
+                                新手引导
+                            </div>
+                            <span class="tab-triangle"></span>
+                        </div>
                     </li>
                     <li>
                         <a href="#" title="" class="iconfont">&#xe621;</a>
+                        <div class="tab-item">
+                            <div class="tab-item-cont">
+                                立即收藏
+                            </div>
+                            <span class="tab-triangle"></span>
+                        </div>
                     </li>
                     <li>
                         <a href="#" title="" class="iconfont">&#xe61f;</a>
+                        <div class="tab-item">
+                            <div class="tab-item-cont">
+                                二维码
+                            </div>
+                            <span class="tab-triangle"></span>
+                        </div>
                     </li>
                     <li>
                         <a href="#" title="" class="go-top"><span></span>TOP</a>
+                        <div class="tab-item">
+                            <div class="tab-item-cont">
+                                返回顶部
+                            </div>
+                            <span class="tab-triangle"></span>
+                        </div>
                     </li>
                 </ul>
                 <div class="go-floor">
