--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
     <script src="static/src/js/jquery-1.10.1.min.js"></script>
     <script src="static/src/js/index.js"></script>
     <script src="static/src/js/global.js"></script>
-
-
-
 </head>
 <body>
     <div class="top">
@@ -154,6 +151,31 @@
             </div>
             <div class="sider">
                 <h2 class="sider-title"><span class="iconfont">&#xe61a;</span>全部商品分类</h2>
+                <ul class="sider-type">
+                    <li><a href="#" title=""><span class="sider-triangle"></span><span class="iconfont">&#xe600;</span>潮流女装</a></li>
+                    <li><a href="#" title=""><span class="sider-triangle"></span><span class="iconfont">&#xe601;</span>精品男装</a></li>
+                    <li><a href="#" title=""><span class="sider-triangle"></span><span class="iconfont">&#xe602;</span>鞋子箱包</a></li>
+                    <li><a href="#" title=""><span class="sider-triangle"></span><span class="iconfont">&#xe605;</span>时尚佩饰</a></li>
+                    <li><a href="#" title=""><span class="sider-triangle"></span><span class="iconfont">&#xe606;</span>美食/特产</a></li>
+                    <li><a href="#" title=""><span class="sider-triangle"></span><span class="iconfont">&#xe604;</span>数码家电</a></li>
+                    <li><a href="#" title=""><span class="sider-triangle"></span><span class="iconfont">&#xe603;</span>家具日用</a></li>
+                    <li><a href="#" title=""><span class="sider-triangle"></span><span class="iconfont">&#xe607;</span>美容护肤</a></li>
+                    <li><a href="#" title=""><span class="sider-triangle"></span><span class="iconfont">&#xe608;</span>母婴用品</a></li>
+                    <li><a href="#" title=""><span class="sider-triangle"></span><span class="iconfont">&#xe609;</span>综合商品</a></li>
+                </ul>
+                <div class="sider-type-second">
+                    <div class="type-item">
+                        <a href="#" title="">上衣</a>
+                        <a href="#" title="">女裤</a>
+                        <a href="#" title="">外套</a>
+                        <a href="#" title="">裙子</a>
+                        <a href="#" title="">套装/礼服</a>
+                        <a href="#" title="">中年女装</a>
+                        <a href="#" title="">户外服装</a>
+                        <a href="#" title="">内衣</a>
+                        <a href="#" title="">其他</a>
+                    </div>
+                </div>
             </div>
             <div class="small-banner"></div>            
         </div>
