--- a/index.html
+++ b/index.html
@@ -177,7 +177,32 @@
                     </div>
                 </div>
             </div>
-            <div class="small-banner"></div>            
+            <div class="small-banner">
+                <div class="small-panel">
+                    <ul>
+                        <li><a href="#"><img src="#" width="200" height="218" alt="" /></a></li>
+                        <li><a href="#"><img src="#" width="200" height="218" alt="" /></a></li>
+                        <li><a href="#"><img src="#" width="200" height="218" alt="" /></a></li>
+                    </ul>
+                    <div class="small-tab">
+                        <a href="#"></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                    </div>
+                </div>
+                <div class="notice">
+                    <div class="notice-tab">
+                        <a href="#">公告</a>   
+                        <a href="#">买家规则</a>   
+                        <a href="#">商家规则</a>   
+                    </div>
+                    <div class="notice-cont-item">
+                        <a href="#">· 春节发货和返款时间的调整公告</a>
+                        <a href="#">· 春节发货和返款时间的调整公告</a>
+                        <a href="#">· 春节发货和返款时间的调整公告</a>
+                    </div>
+                </div>
+            </div>            
         </div>
     </div>
     <div class="warp">
