【修改】优化css代码

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <script src="static/src/js/global.js"></script>
 </head>
 <body>
-    <div class="top">
-        <div class="top-md">
+    <div class="top clearfix">
+        <div class="top-md clearfix">
             <div class="top-r-nav">
                 <ul>
                     <li class="J_attention n-float-box attention">
@@ -147,6 +147,13 @@
                             </a>
                         </li>
                     </ul>
+                    <div class="b-tab">
+                        <a href="#" title="">1</a>
+                        <a href="#" title="">2</a>
+                        <a href="#" title="">3</a>
+                        <a href="#" title="">4</a>
+                        <a href="#" title="">5</a>
+                    </div>
                 </div>
             </div>
             <div class="sider">
@@ -206,7 +213,7 @@
         </div>
     </div>
     <div class="warp">
-        <div class="md-warp new-goods">
+        <div class="md-warp new-goods clearfix">
             <div class="floor-title">
                 <a class="more" href="#">更多<b class="iconfont">&#xe611;</b></a>
                 <div class="new-goods-tab">
@@ -640,7 +647,11 @@
             </div>
         </div>
 
-        <div class="md-warp streamer"></div>
+        <div class="md-warp streamer">
+            <a href="#" title="">
+                <img src="http://i.mmcdn.cn/simba/img/TB1AihXIXXXXXabXVXXSutbFXXX.jpg" width="1190" height="90" alt="">
+            </a>
+        </div>
 
         <div class="md-warp expert">
             <div class="expert-save">
