--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="static/src/js/index.js"></script>
     <script src="static/src/js/global.js"></script>
     <script src="static/src/js/jquery.MenuNav.js"></script>
+    <script src="static/src/js/jquery.xslider.js"></script>
 
 </head>
 <body>
@@ -138,26 +139,8 @@
             </a>
         </div>
     </div>
-    <div class="banner">
+    <div class="J_banner banner" style="background-color:#fe2f70;">
         <div class="banner-main">
-            <div class="banner-pannel">
-                <div class="banner-cont">
-                    <ul>
-                        <li>
-                            <a href="#">
-                                <img src="/static/src/img/001.jpg" alt="" />
-                            </a>
-                        </li>
-                    </ul>
-                    <div class="b-tab">
-                        <a href="#" title="">1</a>
-                        <a href="#" title="">2</a>
-                        <a href="#" title="">3</a>
-                        <a href="#" title="">4</a>
-                        <a href="#" title="">5</a>
-                    </div>
-                </div>
-            </div>
             <div class="sider">
                 <h2 class="sider-title"><span class="iconfont">&#xe61a;</span>全部商品分类</h2>
                 <ul class="J_menu sider-type">
@@ -317,6 +300,32 @@
                 </div>
             </div>            
         </div>
+        <div class="banner-panel">
+            <div class="banner-item banner-item-cur">
+                <div class="banner-item-ct">
+                    <a href="#fuck">
+                        <img src="/static/src/img/1.jpg" alt="" />
+                    </a>
+                </div>
+            </div>
+            <div class="banner-item">
+                <div class="banner-item-ct">
+                    <a href="#fuck">
+                        <img src="/static/src/img/2.jpg" alt="" />
+                    </a>
+                </div>
+            </div>
+            <div class="md-warp b-tab-box">
+                <div class="J_b_tab b-tab">
+                    <a href="#" title="">1</a>
+                    <a href="#" title="">2</a>
+                    <a href="#" title="">3</a>
+                    <a href="#" title="">4</a>
+                    <a href="#" title="">5</a>
+                </div>
+            </div>
+        </div>
+        
     </div>
     <div class="warp">
         <div class="md-warp new-goods clearfix">
