--- a/index.html
+++ b/index.html
@@ -139,10 +139,12 @@
             </a>
         </div>
     </div>
-    <div class="J_banner banner" style="background-color:#fe2f70;">
+    <div class="banner">
         <div class="banner-main">
             <div class="sider">
-                <h2 class="sider-title"><span class="iconfont">&#xe61a;</span>全部商品分类</h2>
+                <h2 class="sider-title">
+                    <span class="iconfont">&#xe61a;</span>全部商品分类
+                </h2>
                 <ul class="J_menu sider-type">
                     <li data-id="1"><a href="#" title=""><span class="sider-triangle"></span><span class="iconfont">&#xe600;</span>潮流女装</a></li>
                     <li data-id="2"><a href="#" title=""><span class="sider-triangle"></span><span class="iconfont">&#xe601;</span>精品男装</a></li>
@@ -300,21 +302,43 @@
                 </div>
             </div>            
         </div>
-        <div class="banner-panel">
-            <div class="banner-item banner-item-cur">
+        <div class="J_banner banner-panel">
+            <div class="banner-item" style="background-color:#fe2f70">
                 <div class="banner-item-ct">
                     <a href="#fuck">
                         <img src="/static/src/img/1.jpg" alt="" />
                     </a>
                 </div>
             </div>
-            <div class="banner-item">
+            <div class="banner-item" style="background-color:#ff6591">
                 <div class="banner-item-ct">
                     <a href="#fuck">
                         <img src="/static/src/img/2.jpg" alt="" />
                     </a>
                 </div>
             </div>
+            <div class="banner-item" style="background-color:#dcdcdc">
+                <div class="banner-item-ct">
+                    <a href="#fuck">
+                        <img src="/static/src/img/3.jpg" alt="" />
+                    </a>
+                </div>
+            </div>
+            <div class="banner-item" style="background-color:#dcdcdc">
+                <div class="banner-item-ct">
+                    <a href="#fuck">
+                        <img src="/static/src/img/4.jpg" alt="" />
+                    </a>
+                </div>
+            </div>
+            <div class="banner-item" style="background-color:#f53252">
+                <div class="banner-item-ct">
+                    <a href="#fuck">
+                        <img src="/static/src/img/5.jpg" alt="" />
+                    </a>
+                </div>
+            </div>
+
             <div class="md-warp b-tab-box">
                 <div class="J_b_tab b-tab">
                     <a href="#" title="">1</a>
