【修改】优化js切换

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                 </div>
             </div>
             <div class="J_side_c new-goods-cont">
-                <div class="J_g_n_c" style="position:absolute; padding-left:190px;">
+                <div class="J_g_n_c">
                     <div class="goods-cont-item">
                         <ul class="md-warp-cont">
                             <li>
