【修改】优化图片切换js

--- a/index.html
+++ b/index.html
@@ -374,9 +374,14 @@
                     <span>|</span>
                 </div>
             </div>
-            <div class="J_side_c new-goods-cont">
-                <div class="J_g_n_c">
-                    <div class="goods-cont-item">
+            <div class="goods-cont-item-bn">
+                <a href="#" title="">
+                    <img src="static/src/img/new.jpg"  width="190" height="263" alt="今日最大牌">
+                </a>
+            </div>
+            <div class="J_g_n_c new-goods-cont">
+                <div class="J_side_line goods-cont-item">
+                    <div class="goods-c-i-p">
                         <ul class="md-warp-cont">
                             <li>
                                 <a href="#">
@@ -482,7 +487,14 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="goods-cont-item">
+
+                    <div class="new-goods-cont-tab">
+                        <a href="javascript:;"class="J_prev tab-l iconfont"  title="">&#xe622;</a>
+                        <a href="javascript:;"class="J_next tab-r iconfont"  title="">&#xe623;</a>
+                    </div>
+                </div>
+                <div class="J_side_new goods-cont-item">
+                    <div class="goods-c-i-p">
                         <ul class="md-warp-cont">
                             <li>
                                 <a href="#">
@@ -588,15 +600,11 @@
                             </li>
                         </ul>
                     </div>
-                </div>
-                <div class="J_g_n_c_tab new-goods-cont-tab">
-                    <a href="javascript:;"class="prev tab-l iconfont"  title="">&#xe622;</a>
-                    <a href="javascript:;"class="next tab-r iconfont"  title="">&#xe623;</a>
-                </div>
-                <div class="goods-cont-item-bn">
-                    <a href="#" title="">
-                        <img src="static/src/img/new.jpg"  width="190" height="263" alt="今日最大牌">
-                    </a>
+
+                    <div class="J_g_n_c_tab new-goods-cont-tab">
+                        <a href="javascript:;"class="J_prev tab-l iconfont"  title="">&#xe622;</a>
+                        <a href="javascript:;"class="J_next tab-r iconfont"  title="">&#xe623;</a>
+                    </div>
                 </div>
             </div>
         </div>
