【修改】图片切换js封装的方式，方便seajs调用

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
     <link rel="stylesheet" href="static/src/css/index.css">
     <link rel="stylesheet" href="static/src/css/header.css">
     <script src="static/src/js/jquery-1.10.1.min.js"></script>
-    <script src="static/src/js/index.js"></script>
     <script src="static/src/js/global.js"></script>
     <script src="static/src/js/jquery.MenuNav.js"></script>
     <script src="static/src/js/jquery.xslider.js"></script>
-
-
+    <script src="static/src/js/index.js"></script>
+    
 </head>
 <body>
     <div class="top clearfix">
@@ -2141,7 +2140,7 @@
              </div>   
         </div>
     </div>
-    <div class="r-sidebar-md">
+    <div id="J_r_sidebar" class="r-sidebar-md">
         <div class="r-side-box">
             <div class="r-side-cont">
                 <ul id="J_side">
